--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,17 @@
 
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
